# animelib_downloader

./: .gitignore  config.py  main.py  pyproject.toml
core/: downloader.py  scraper.py  upscale.py
